feat: add methods for retrieving transcript content directly
refactor: move repeated arguments to TranscriptRequest object